--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGODB_URI=mongodb+srv://bonnienjuguna106:cryptodom@cluster0.volu0qa.mongodb.net/cryptodom
+MONGODB_URI=mongodb+srv://bonnienjuguna106:cryptic@cluster0.oadp0ry.mongodb.net/
 
+NEXTAUTH_SECRET=werdtfgyvbhjnk
+
+NEXTAUTH_URL=http://localhost:3000
